--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
+        "indent": ["error", "tab", { "ignoredNodes": ["PropertyDefinition"] }],
         "linebreak-style": [
             "error",
             "unix"
