--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
@@ -37,6 +38,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.7.1",
     "mongodb": "^3.7.3",
     "npm": "^9.1.2",
