--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,9 @@
 	"compilerOptions": {
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-	}
+		"typeRoots": [
+			"./src/@types",
+			"./node_modules/@types"
+		]
+	},
 }
